--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,10 +1,9 @@
 {% extends 'base.html' %}
-
 {% block title %}Homepage{% endblock %}
 
 {% block section %}
 <form action="" method="post" enctype="multipart/form-data">
-    Select the music to upload:
+    <p class="lead font-weight-normal">Select the music to upload:</p>
     <input type="file" name="file" id="musicToUpload">
     <input type="submit" value="Upload Music" name="submit">
 </form>
