--- a/templates/about.html
+++ b/templates/about.html
@@ -1,10 +1,25 @@
 {% extends 'base.html' %}
-{% block home %}"nav-item"{% endblock %}
-{% block about %}"nav-item active"{% endblock %}
+{% block title %}About{% endblock %}
+{% block nav_bar %}
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="/">Home </a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="/about">About </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/samples">Samples </a>
+            </li>
+          </ul>
+{% endblock %}
 {% block section %}
 <div class="col-md-5 p-lg-5 mx-auto my-5">
   <p class="lead font-weight-normal">This is the webapp of the open source project <a href="https://github.com/StatisticDean/Crystal_Clear">Crystal Clear</a>.
     The idea of this project is to apply Deep Learning image superresolution techniques to spectrogram "images" generated from an audio
-    file in order to get a better quality of audio. On the Home page, you can upload a file which will be processed by the latest version of the audio superresolution model.</p>
+    file in order to get a better quality of audio.</p>
+  <p class="lead font-weight-normal">On the Home page, you can upload a file which will be processed by the latest version of the audio superresolution model.</p>
+  <p class="lead font-weight-normal">On the Samples page, you can find audio samples of 30 sec already processed by the algorithm. In those samples, the original file is a low quality audio file 
+    which has never been seen by the algorithm.</p>
 </div>
 {% endblock %}
