--- a/templates/home.html
+++ b/templates/home.html
@@ -1,1 +1,15 @@
 {% extends 'base.html' %}
+{% block title %}Homepage{% endblock %}
+{% block nav_bar %}
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="/">Home </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/about">About </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/samples">Samples </a>
+            </li>
+          </ul>
+{% endblock %}
