--- a/templates/inprogress.html
+++ b/templates/inprogress.html
@@ -1,3 +1,3 @@
-{% extends 'base.html' %}
+{% extends 'home.html' %}
 {% block add_header %}<meta http-equiv="refresh" content="5" >{% endblock %}
 {% block section %}IN PROGRESS{% endblock %}
