--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,5 +1,4 @@
-{% extends 'base.html' %}
-{% block title %}Homepage{% endblock %}
+{% extends 'home.html' %}
 
 {% block section %}
 <form action="" method="post" enctype="multipart/form-data">
